# computer-club

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
src/: CMakeLists.txt  main.cpp
src/ComputerClub/: CMakeLists.txt  ComputerClub.cpp  ComputerClub.hpp
src/Config/: CMakeLists.txt  Config.hpp
src/Events/: CMakeLists.txt  Events.cpp  Events.hpp
src/Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
src/Simulator/: CMakeLists.txt  Simulator.cpp  Simulator.hpp
src/Time/: CMakeLists.txt  Time.cpp  Time.hpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt  IntegrationTests.cpp
tests/integration/data/: ClientArrivingTooEarly.in  ClientArrivingTooEarly.out  ClientArrivingTwoTimes.in  ClientArrivingTwoTimes.out  ClientChangesTable.in  ClientChangesTable.out  ClientJoinsQueueWithUnusedTable.in  ClientJoinsQueueWithUnusedTable.out  ClientTriesToSitAtHisOwnTable.in  ClientTriesToSitAtHisOwnTable.out  ClientsLeaveInAlphabeticOrder.in  ClientsLeaveInAlphabeticOrder.out  QueueTooLong.in  QueueTooLong.out  TableUsedAfterClientLeft.in  TableUsedAfterClientLeft.out  TwoClientsSittingAtSameTable.in  TwoClientsSittingAtSameTable.out  UnknownClientJoinsQueue.in  UnknownClientJoinsQueue.out  UnknownClientLeaves.in  UnknownClientLeaves.out  UnknownClientsSitsAtTable.in  UnknownClientsSitsAtTable.out
